--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-<app-card house="Clubs" number=4></app-card>
-</div>
-<h2>Here are some links to help you start: </h2>
+<div style="text-align:center"></div>
 
 <router-outlet></router-outlet>
