--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,7 @@
-<p>
-  login works!
-</p>
+<label>
+  Name:
+  <input type="text" [formControl]="username" />
+  {{ username.value }}
+
+  <button (click)="onLoginClick(username.value)">Login</button>
+</label>
