--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -210,7 +210,7 @@
   max-width: 300px;
   min-width: 200px;
   height: 250px;
-  background-color: #292929;
+  background-color: white;
   margin: 10px;
   border-radius: 10px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
@@ -265,7 +265,7 @@
   margin: 0;
   text-align: center;
   margin-top: 30px;
-  color: white;
+  color: black;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -277,7 +277,7 @@
   font-size: 13px;
   text-align: center;
   margin-top: 20px;
-  color: white;
+  color: black;
   font-weight: 200;
   letter-spacing: 2px;
   opacity: 0;
@@ -304,6 +304,9 @@
   transition: all 0.3s ease;
 }
 
+.login-btn {
+  background-color: #ff4848;
+}
 .card:hover .icon i {
   background: linear-gradient(90deg, #ff7e7e, #ff4848);
   -webkit-background-clip: text;
