fix socket dependencies

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="center-div" *ngIf="showLoader">
-    <h1>Having Connectivity Issues</h1>
+    <!-- <h1>Having Connectivity Issues</h1> -->
     <h2>Trying to join you back to the game...</h2>
 
     <mat-progress-spinner
