--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,11 +1,5 @@
 <div>
-  <div *ngIf="!showLoader">
-    <p>I am player {{ name }}</p>
-    <div *ngFor="let card of cards">
-      <app-card house="{{ card.house }}" number="{{ card.number }}"> </app-card>
-    </div>
-  </div>
-
+  <p>I am player {{ name }}</p>
   <div class="center-div" *ngIf="showLoader">
     <!-- <h1>Having Connectivity Issues</h1> -->
     <h2>Trying to join you back to the game...</h2>
@@ -16,5 +10,31 @@
       [mode]="spinnerMode"
       [value]="value"
     ></mat-progress-spinner>
+  </div>
+
+  <mat-grid-list cols="13" rowHeight="150px">
+    <mat-grid-tile
+      @cards
+      *ngFor="let card of cardsPlayed; let i = index"
+      [attr.data-index]="i"
+    >
+      <app-card house="{{ card.house }}" number="{{ card.number }}"> </app-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+  <div>
+    <div class="card-lane" *ngIf="!showLoader">
+      <mat-grid-list cols="{{ cardsAtHand }}" rowHeight="150px">
+        <mat-grid-tile
+          @cards
+          (dblclick)="moveCardToPlayed(card, i)"
+          *ngFor="let card of cards; let i = index"
+          [attr.data-index]="i"
+        >
+          <app-card house="{{ card.house }}" number="{{ card.number }}">
+          </app-card>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
   </div>
 </div>
