--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -6,3 +6,11 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+.card-lane {
+  height: 150px;
+  position: fixed;
+  bottom: 0%;
+  width: 100%;
+  opacity: 1;
+}
